force-app/main/default/objects/Fokus_Subscription_Service__c/Fokus_Subscription_Service__c.object-meta.xml
<CustomObject>
    <label>Fokus Subscription Service</label>
    <nameField>
        <label>Fokus Subscription Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fokus Subscription Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>