force-app/main/default/objects/Fokus_Subscription_Service__c/fields/COMMIT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>COMMIT_END_DATE__c</fullName>
    <label>COMMIT END DATE</label>
    <type>Date</type>
</CustomField>