force-app/main/default/objects/Fokus_Subscription_Service__c/fields/DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT__c</fullName>
    <label>DISCOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>