force-app/main/default/objects/Fokus_Subscription_Service__c/fields/DISCOUNT_MULTIPLIER__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_MULTIPLIER__c</fullName>
    <label>DISCOUNT_MULTIPLIER</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>