force-app/main/default/objects/Fokus_Subscription_Service__c/fields/FEATURE_CODE__c.field-meta.xml
<CustomField>
    <fullName>FEATURE_CODE__c</fullName>
    <label>FEATURE_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>