force-app/main/default/objects/Fokus_Subscription_Service__c/fields/FEATURE_DESC__c.field-meta.xml
<CustomField>
    <fullName>FEATURE_DESC__c</fullName>
    <label>FEATURE_DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>