force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Subscription Service (Main Product)</relationshipLabel>
    <relationshipName>Fokus_Subscription_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>