force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Main_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Main_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Fokus Subscription Service (Main Subscription)</relationshipLabel>
    <relationshipName>Fokus_Subscription_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>