force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>