force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Process_Message__c.field-meta.xml
<CustomField>
    <fullName>Process_Message__c</fullName>
    <label>Process Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>