force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fokus Subscription Service</relationshipLabel>
    <relationshipName>Fokus_Subscription_Service</relationshipName>
    <type>Lookup</type>
</CustomField>