force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>SBQQ__ProductOption__c</referenceTo>
    <relationshipLabel>Fokus Subscription Service</relationshipLabel>
    <relationshipName>Fokus_Subscription_Service</relationshipName>
    <type>Lookup</type>
</CustomField>