force-app/main/default/objects/Fokus_Subscription_Service__c/fields/RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_VAT__c.field-meta.xml
<CustomField>
    <fullName>RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_VAT__c</fullName>
    <label>RECURRING_PRICE_BEFORE_DISCOUNT_EXCL_VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>