force-app/main/default/objects/Fokus_Subscription_Service__c/fields/SOC__c.field-meta.xml
<CustomField>
    <fullName>SOC__c</fullName>
    <label>SOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>