force-app/main/default/objects/Fokus_Subscription_Service__c/fields/SOC_INTAKE_DATE__c.field-meta.xml
<CustomField>
    <fullName>SOC_INTAKE_DATE__c</fullName>
    <label>SOC_INTAKE_DATE</label>
    <type>DateTime</type>
</CustomField>