force-app/main/default/objects/Fokus_Subscription_Service__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipLabel>Fokus Subscription Service</relationshipLabel>
    <relationshipName>Fokus_Subscription_Service</relationshipName>
    <type>Lookup</type>
</CustomField>